<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="result_label">Result :</string>
    <string name="add_button_string">Add (+)</string>
    <string name="subtract_button_string">Subtract (-)</string>
    <string name="multiply_button_string">Multiply (x)</string>
    <string name="divide_button_string">Divide (/)</string>
    <string name="clearall_button_string">Clear All</string>
    <string name="number1_hint_string">Number 1</string>
    <string name="number2_hint_string">Number 2</string>

</resources>
